--- a/hair-styling.html
+++ b/hair-styling.html
@@ -67,15 +67,10 @@
 
 <body>
 
-
-
     <div class="preloader">
         <div class="preloader__image"></div>
     </div>
     <!-- /.preloader -->
-
-
-
 
     <div class="page-wrapper">
         <header class="main-header">
@@ -98,8 +93,8 @@
                         <div class="main-header__top-right">
                             <div class="main-header__social">
                                 <a target="_blank" href="https://www.facebook.com/asunasalon/"><i class="fab fa-facebook"></i></a>
-                                <a target="_blank" href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
-                                <a target="_blank" href="https://www.instagram.com/saba.asuna/"><i class="fab fa-instagram"></i></a>
+                                <a target="_blank" href="https://www.tiktok.com/@saba.asuno"><i class="fab fa-tiktok"></i></a>
+                                <a target="_blank" href="https://www.instagram.com/saba.asuno/"><i class="fab fa-instagram"></i></a>
                             </div>
                             <div class="main-header__btn-box">
                                 
@@ -176,7 +171,7 @@
                             <div class="services-details-two__category">
                                 <ul class="services-details-two__category-list list-unstyled">
                                     <li class="active">
-                                        <a href="hair-styling.html">Hair Dressing <i class="fa fa-angle-right"></i></a>
+                                        <a>Hair Dressing <i class="fa fa-angle-right"></i></a>
                                     </li>
                                     <li>
                                         <a href="beauty-treatments.html">Beauty Treatments <i class="fa fa-angle-right"></i></a>
@@ -385,8 +380,8 @@
                             <div class="footer-widget__column footer-widget__social-box">
                                 <div class="site-footer__social">
                                     <a target="_blank" href="https://www.facebook.com/asunasalon"><i class="fab fa-facebook"></i></a>
-                                    <a target="_blank" href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
-                                    <a target="_blank" href="https://www.instagram.com/saba.asuna/"><i class="fab fa-instagram"></i></a>
+                                    <a target="_blank" href="https://www.tiktok.com/@saba.asuno"><i class="fab fa-tiktok"></i></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuno/"><i class="fab fa-instagram"></i></a>
                                 </div>
                                 <p>Birmingham<br>UK</p>
                             </div>
@@ -440,8 +435,8 @@
                 <div class="mobile-nav__social">
                     <a href="https://wa.me/447931931966" class="fab fa-whatsapp"></a>
                     <a href="https://www.facebook.com/asunasalon" class="fab fa-facebook"></a>
-                    <a href="https://www.tiktok.com/@saba.asuna" class="fab fa-tiktok"></a>
-                    <a href="https://www.instagram.com/saba.asuna" class="fab fa-instagram"></a>
+                    <a href="https://www.tiktok.com/@saba.asuno" class="fab fa-tiktok"></a>
+                    <a href="https://www.instagram.com/saba.asuno" class="fab fa-instagram"></a>
                 </div><!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
 
