--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         <div class="main-header__top-right">
                             <div class="main-header__social">
                                 <a target="_blank" href="https://www.facebook.com/asunasalon/"><i class="fab fa-facebook"></i></a>
-                                <a target="_blank" href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
-                                <a target="_blank" href="https://www.instagram.com/saba.asuna/"><i class="fab fa-instagram"></i></a>
+                                <a target="_blank" href="https://www.tiktok.com/@saba.asuno"><i class="fab fa-tiktok"></i></a>
+                                <a target="_blank" href="https://www.instagram.com/saba.asuno/"><i class="fab fa-instagram"></i></a>
                             </div>
                             <div class="main-header__btn-box">
                                 
@@ -726,7 +726,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-new-1.svg" alt="">
                                 <div class="instagram__img-icon">
-                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuno"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -738,7 +738,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-new-2.svg" alt="">
                                 <div class="instagram__img-icon">
-                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuno"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -750,7 +750,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-new-3.svg" alt="">
                                 <div class="instagram__img-icon">
-                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuno"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -762,7 +762,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-new-4.svg" alt="">
                                 <div class="instagram__img-icon">
-                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuno"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -774,7 +774,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-new-5.svg" alt="">
                                 <div class="instagram__img-icon">
-                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuno"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -786,7 +786,7 @@
                             <div class="instagram__img">
                                 <img src="assets/images/My-images/insta-3.webp" alt="">
                                 <div class="instagram__img-icon">
-                                    <a target="_blank" href="https://www.instagram.com/saba.asuna"><span class="fab fa-instagram"></span></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuno"><span class="fab fa-instagram"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -961,8 +961,8 @@
                             <div class="footer-widget__column footer-widget__social-box">
                                 <div class="site-footer__social">
                                     <a target="_blank" href="https://www.facebook.com/asunasalon"><i class="fab fa-facebook"></i></a>
-                                    <a target="_blank" href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
-                                    <a target="_blank" href="https://www.instagram.com/saba.asuna/"><i class="fab fa-instagram"></i></a>
+                                    <a target="_blank" href="https://www.tiktok.com/@saba.asuno"><i class="fab fa-tiktok"></i></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuno/"><i class="fab fa-instagram"></i></a>
                                 </div>
                                 <p>Birmingham<br>UK</p>
                             </div>
@@ -1017,8 +1017,8 @@
                 <div class="mobile-nav__social">
                     <a href="https://wa.me/447931931966" class="fab fa-whatsapp"></a>
                     <a href="https://www.facebook.com/asunasalon" class="fab fa-facebook"></a>
-                    <a href="https://www.tiktok.com/@saba.asuna" class="fab fa-tiktok"></a>
-                    <a href="https://www.instagram.com/saba.asuna" class="fab fa-instagram"></a>
+                    <a href="https://www.tiktok.com/@saba.asuno" class="fab fa-tiktok"></a>
+                    <a href="https://www.instagram.com/saba.asuno" class="fab fa-instagram"></a>
                 </div><!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
 
