--- a/head-spa.html
+++ b/head-spa.html
@@ -85,8 +85,8 @@
                         <div class="main-header__top-right">
                             <div class="main-header__social">
                                 <a target="_blank" href="https://www.facebook.com/asunasalon/"><i class="fab fa-facebook"></i></a>
-                                <a target="_blank" href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
-                                <a target="_blank" href="https://www.instagram.com/saba.asuna/"><i class="fab fa-instagram"></i></a>
+                                <a target="_blank" href="https://www.tiktok.com/@saba.asuno"><i class="fab fa-tiktok"></i></a>
+                                <a target="_blank" href="https://www.instagram.com/saba.asuno/"><i class="fab fa-instagram"></i></a>
                             </div>
                             <div class="main-header__btn-box">
                                 
@@ -169,7 +169,7 @@
                                         <a href="beauty-treatments.html">Beauty Treatments <i class="fa fa-angle-right"></i></a>
                                     </li>
                                     <li class="active">
-                                        <a href="head-spa.html">Head Spa<i class="fa fa-angle-right"></i></a>
+                                        <a>Head Spa<i class="fa fa-angle-right"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -419,8 +419,8 @@
                             <div class="footer-widget__column footer-widget__social-box">
                                 <div class="site-footer__social">
                                     <a target="_blank" href="https://www.facebook.com/asunasalon"><i class="fab fa-facebook"></i></a>
-                                    <a target="_blank" href="https://www.tiktok.com/@saba.asuna"><i class="fab fa-tiktok"></i></a>
-                                    <a target="_blank" href="https://www.instagram.com/saba.asuna/"><i class="fab fa-instagram"></i></a>
+                                    <a target="_blank" href="https://www.tiktok.com/@saba.asuno"><i class="fab fa-tiktok"></i></a>
+                                    <a target="_blank" href="https://www.instagram.com/saba.asuno/"><i class="fab fa-instagram"></i></a>
                                 </div>
                                 <p>Birmingham<br>UK</p>
                             </div>
@@ -476,8 +476,8 @@
                 <div class="mobile-nav__social">
                     <a href="https://wa.me/447931931966" class="fab fa-whatsapp"></a>
                     <a href="https://www.facebook.com/asunasalon" class="fab fa-facebook"></a>
-                    <a href="https://www.tiktok.com/@saba.asuna" class="fab fa-tiktok"></a>
-                    <a href="https://www.instagram.com/saba.asuna" class="fab fa-instagram"></a>
+                    <a href="https://www.tiktok.com/@saba.asuno" class="fab fa-tiktok"></a>
+                    <a href="https://www.instagram.com/saba.asuno" class="fab fa-instagram"></a>
                 </div>
                 <!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
