--- a/beauty-treatments.html
+++ b/beauty-treatments.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Beauty Treatments || Asuna Salon </title>
+    <title> Beauty Treatments || Asuno Salon </title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Asuna Salon - Beauty and Wellness" />
+    <meta name="description" content="Asuno Salon - Beauty and Wellness" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -196,7 +196,7 @@
                             <!-- Main Title -->
                             <h3 class="services-details-two__title-1">Facials & Skin Treatments</h3>
                             <p class="services-details-two__text-1">
-                                At Asuna Salon, our expert facials go beyond relaxation—they deeply cleanse, exfoliate, and restore your skin’s natural glow. From Crystal Clear Microdermabrasion to blackhead extractions and gentle, sensitive-skin formulas, each treatment is tailored to your skin’s unique needs in our calming home-based space.
+                                At Asuno Salon, our expert facials go beyond relaxation—they deeply cleanse, exfoliate, and restore your skin’s natural glow. From Crystal Clear Microdermabrasion to blackhead extractions and gentle, sensitive-skin formulas, each treatment is tailored to your skin’s unique needs in our calming home-based space.
                             </p>
                             <p class="services-details-two__text-2">
                                 We specialize in advanced techniques that tackle acne, congestion, and dullness while boosting hydration and firmness. Whether you’re preparing for a big event with our instant Mini Lift Mask or seeking long-term skin health, our treatments deliver visible results and a true moment of self-care.
@@ -385,7 +385,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuna Salon</a></p>
+                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuno Salon</a></p>
                                 <ul class="list-unstyled site-footer__bottom-menu">
                                     <li><a href="contact.html">Help</a></li>
                                 </ul>
