--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Pricing Plans || Asuna Salon </title>
+    <title> Pricing Plans || Asuno Salon </title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Asuna Salon - Beauty and Wellness" />
+    <meta name="description" content="Asuno Salon - Beauty and Wellness" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -632,7 +632,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuna Salon</a></p>
+                                <p class="site-footer__bottom-text">© Copyright 2025 by <a href="#">Asuno Salon</a></p>
                                 <ul class="list-unstyled site-footer__bottom-menu">
                                     <li><a href="contact.html">Help</a></li>
                                 </ul>
