Website menu update

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                 <h3 class="services-one__title"><a href="pricing-plans.html#beauty-menu">Head Spa</a></h3>
                                 <p class="services-one__text">Relax and unwind with our rejuvenating head spa treatments, all from the comfort of our peaceful home salon.</p>
                                 <div class="services-one__btn-box">
-                                    <a href="pricing-plans.html#beauty-menu" class="services-one__btn">Book Now<i
+                                    <a href="pricing-plans.html#spa-menu" class="services-one__btn">Book Now<i
                                             class="icon-right-arrow"></i></a>
                                 </div>
                             </div>
